# ht6-savepoint

./: .gitignore  CLAUDE.md  DESIGN.md  Makefile  PLAN.md  README.md
.github/workflows/: ci-backend.yml  ci-edge.yml  ci-frontend.yml  ci-pipeline.yml  commitlint.yml  pages.yml
app/: .gitignore  .prettierignore  CANVAS_ARCH_V2.md  CANVAS_SPEC.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
app/e2e/: camera-to-plaza.spec.ts  record-to-scene.spec.ts
app/public/: manifest.webmanifest
app/scripts/: seed_demo.py
app/src/: App.test.tsx  App.tsx  main.ts  main.tsx
app/src/components/: AppShell.tsx  BottomNav.tsx  Icon.tsx  MicCapture.tsx  PageFallback.tsx  PageTransition.tsx  PeopleModal.test.tsx  PeopleModal.tsx  PersonModal.test.tsx  PersonModal.tsx  PixelChrome.tsx  SpriteAvatar.tsx  Toast.tsx  TopBar.tsx
app/src/engine/: assets.ts  camera.ts  input.ts  loop.ts  scene.ts  sprite.ts  surface.ts  text.ts  tilemap.ts  ui.ts
app/src/lib/: api.ts  calendar.test.ts  calendar.ts  contacts.test.ts  contacts.ts  custom-avatar.tsx  customizer.test.ts  customizer.ts  detailed-sprite.tsx  mic.test.ts  mic.ts  nav.test.ts  nav.ts  pixel-sprite.test.tsx  pixel-sprite.tsx  portrait.test.ts  portrait.ts  record.test.ts  record.ts  scene-utils.test.ts  scene-utils.ts  scene.tsx  seed.ts  sprite-sheet.ts  sprite.tsx  theme.ts  toast.ts  use-body-scroll-lock.test.tsx  use-body-scroll-lock.ts  wander.test.ts  wander.ts  wav.test.ts  wav.ts
app/src/pages/: CustomizePage.tsx  DayScenePage.tsx  DayViewPage.tsx  GardenPage.tsx  PastMonthPage.tsx  PeoplePage.tsx  PersonPage.test.tsx  PersonPage.tsx  PlazaPage.tsx  RecordPage.tsx  TodayPage.tsx  VoiceSetupPage.test.tsx  VoiceSetupPage.tsx
app/src/scenes/: day.ts  garden.ts  past.ts  people.ts  plaza.ts
app/src/styles/: globals.css  pixel.css  theme.css
app/src/test/: setup.ts
docs/: DEPLOY.md  DEV.md  PIXELLAB.md  index.html
docs/assets/: site.css  site.js
docs/demo/: demo-script.md  devpost-drafts.md  freesolo-submission.md
edge/: .env.example  .gitignore  README.md  pyproject.toml
edge/scripts/: debug_stream.py
edge/src/savepoint_edge/: debug_server.py  debug_view.py  event.py  hal.py  identity_gallery.py  main.py  sprite_params.py  types.py
edge/src/savepoint_edge/backends/linux/: linux_camera.py  linux_face_detector.py  linux_mute_switch.py
edge/src/savepoint_edge/backends/sim/: sim_camera.py  sim_face_detector.py  sim_mute_switch.py
edge/src/savepoint_edge/sinks/: file_sink.py  http_sink.py  stdout_sink.py
edge/tests/: test_debug_view.py  test_event.py  test_http_sink.py  test_identity_gallery.py  test_sprite_params.py
pipeline/: .gitignore  README-upstream.md  README.md  align.py  diarize.py  make_testcases.sh  pyproject.toml  requirements.txt  score.py  transcribe.sh
pipeline/testcases/: tc1_02min.json  tc1_02min.txt  tc2_10min.json  tc2_10min.txt  tc3_30min.json  tc3_30min.txt  tc4_50min.json  tc4_50min.txt  tc5_80min.json  tc5_80min.txt
pipeline/tests/: test_score.py  test_testcases.py
server/: .env.example  .gitignore  README.md  pyproject.toml
server/finetune/: environment.py  smoke_test.py
server/finetune/configs/: sft.toml
server/finetune/dataset/: train.jsonl
server/scripts/: gen_sprites.py
server/src/savepoint_server/: __init__.py  main.py
server/src/savepoint_server/api/: __init__.py  admin.py  binding.py  bio.py  health.py  ingest.py  read.py  recap.py  rename.py  speech.py  vision.py  voice.py
server/src/savepoint_server/core/: __init__.py  config.py
server/src/savepoint_server/db/: __init__.py  mongo.py  repositories.py
server/src/savepoint_server/models/: __init__.py  base.py  day.py  event.py  month.py  person.py  recap.py  sprite.py  transcript.py  views.py  wearer_voice.py
server/src/savepoint_server/services/: __init__.py  bio.py  demo_history.py  ingest.py  llm.py  pixellab.py  recap.py  speech.py  transcript_refine.py  vision.py  voice.py
server/src/savepoint_server/services/fixtures/: stub_transcript.json
server/tests/: conftest.py  test_admin.py  test_bio.py  test_decoupled_ingest.py  test_demo_history.py  test_e2e_ingest.py  test_health.py  test_llm.py  test_month_summary.py  test_pixellab.py  test_plant_stage.py  test_read_api.py  test_recap.py  test_rename.py  test_repositories.py  test_speech.py  test_transcript_refine.py  test_vision.py  test_voice.py
