[project]
name = "savepoint-edge"
version = "0.1.0"
description = "SavePoint edge: Raspberry Pi 5 camera capture -> face detect -> deterministic sprite params -> event emission, plus the hardware mute switch + LED."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Team SavePoint" }]
dependencies = [
    # onnxruntime has real, pip-installable aarch64 wheels — unlike
    # picamera2/gpiozero (see README's "Setup on the Pi" section), it needs
    # no apt/system-site-packages workaround.
    "onnxruntime>=1.18",
]

[project.scripts]
savepoint-edge = "savepoint_edge.main:main"

[dependency-groups]
dev = [
    "ruff==0.8.6",
    "pytest==8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/savepoint_edge"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["savepoint_edge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
