[project]
name = "savepoint-server"
version = "0.1.0"
description = "SavePoint backend: FastAPI + MongoDB that binds edge/speech events into people, days, and recaps."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Team SavePoint" }]
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "motor==3.6.0",
]

[project.scripts]
savepoint-server = "savepoint_server.main:main"

[dependency-groups]
dev = [
    "ruff==0.8.6",
    "mypy==1.14.1",
    "pytest==8.3.4",
    "httpx==0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/savepoint_server"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["savepoint_server"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["savepoint_server"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = ["motor.*", "pymongo.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
